# algorithm

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .sops.yaml  Cargo.toml  Dockerfile  Earthfile  Makefile  Manifest.toml  Project.toml  README.md  appveyor.yml  docker-compose.yaml  docker-compose.yml  grafana-agent.yaml  sonar-project.properties  supervisord.conf
.circleci/: config.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  build.rs  pyproject.toml
backend/proto/internal/simulator/v1/: simulator.proto
backend/sdk/vnscope/: __init__.py  classify.py
backend/src/: helpers.rs  lib.rs  load.rs  main.rs
backend/src/actors/: cron.rs  dnse.rs  fireant.rs  lru.rs  mod.rs  price.rs  process.rs  prometheus.rs  redis.rs  simulator.rs  tcbs.rs  vietcap.rs  vps.rs  websocket.rs
backend/src/actors/tcbs/: actor.rs  mod.rs  monitor.rs  resolver.rs
backend/src/actors/vps/: actor.rs  mod.rs  resolver.rs
backend/src/algorithm/: ahocorasick.rs  bayesian.rs  binarysearch.rs  genetic.rs  heap.rs  kmean.rs  lru.rs  markov.rs  mod.rs
backend/src/algorithm/fuzzy/: delegate.rs  functions.rs  input.rs  mod.rs  rule.rs  variables.rs  variables_tests.rs
backend/src/algorithm/markov/: mod.rs
backend/src/algorithm/math/: appraise.rs  difference.rs  histogram.rs  mod.rs  price.rs  volume.rs
backend/src/algorithm/optimize/: sgd.rs
backend/src/analytic/: mention.rs
backend/src/api/: mod.rs  order.rs
backend/src/api/investing/: mod.rs  ohcl.rs
backend/src/api/ohcl/: v1.rs
backend/src/api/wms/: v1.rs
backend/src/cmds/: bff.rs  client.rs  collect.rs  farm.rs  mod.rs  server.rs
backend/src/components/: auth.rs  event.rs  mod.rs  renderer.rs  simulator.rs
backend/src/entities/: mod.rs
backend/src/entities/ohcl/: mod.rs  prelude.rs
backend/src/entities/wms/: lots.rs  mod.rs  sales.rs  stock_shelves.rs  stocks.rs
backend/src/interfaces/: graphql.rs  mod.rs  pgwire.rs
backend/src/interfaces/storages/actors/: mod.rs
backend/src/repl/: analytics.rs  datastore.rs  market.rs  mod.rs  monitor.rs  order.rs
backend/src/schemas/: airtable.rs  database.rs  graphql.rs  mod.rs  pgwire.rs
backend/src/storages/actors/: mod.rs
backend/tests/: bookmap_test.rs  obv_test.rs  repl_mod_tests.rs  simulator_test.rs  sycamore_test.rs  tokenizers_test.rs  trendline_test.rs
conf/: bff.service  config.alloy  grafana-agent.yaml  torrc
conf/nginx/: http.conf  nginx.conf  www.conf
conf/nginx/map/: 01-jwt.conf  02-widgets.conf  03-docs.conf  04-attack.conf  05-cors.conf
conf/nginx/vhost/: 01-system.conf  02-openid.conf  03-openbb.conf  04-api-exchange-rate.conf  04-api-region.conf  04-api.conf  05-docs.conf  99-assets.conf  99-sitemap.conf  location.conf
conf/supervisor/: with-cloudflare-tunnel.conf  with-tailscale.conf  with-tailscale.ini  with-tor.conf  without-cloudflare-tunnel.conf  without-tailscale.conf  without-tailscale.ini  without-tor.conf
frontend/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: main.rs
pkgs/backend/: Cargo.toml  pyproject.toml
pkgs/backend/debian/: postinst  postrm
pkgs/backend/integration/: Cargo.toml
pkgs/backend/models/: Cargo.toml
pkgs/backend/schemas/: Cargo.toml
pkgs/backend/services/: Cargo.toml
pkgs/backend/src/: crawl.rs  lib.rs  main.rs  server.rs  simulate.rs
pkgs/backend/tests/: bookmap_test.rs  tokenizers_test.rs
pkgs/frontend/: Cargo.toml  index.html
pkgs/frontend/finpathvn/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
pkgs/frontend/src/: main.rs
pkgs/frontend/style/: custom.css
pkgs/libraries/algorithm/: Cargo.toml
pkgs/libraries/analysis/: Cargo.toml
pkgs/macros/vector_config_macro/: Cargo.toml
pkgs/proxy/: Cargo.toml
pkgs/proxy/src/: lib.rs
pkgs/workflow/: bank_rate.py  gold.py  main.py  pyproject.toml
pkgs/workflow/scrape/: __init__.py  ajc_com_vn.py  ancarat_com.py  baotinkk_com.py  btmc_vn.py  doji_vn.py  hhj_adp_p_com.py  hieuvangthanhtau_com_vn.py  hoakimnguyen_com.py  hongphucapp_halozend_com.py  huythanhjewelry_com.py  kimchau_info.py  kimhoancamau_vn.py  kimkhanhviethung_vn.py  kimlongdongthap_vn.py  kimnganphuc_vn.py  kimphat_com_vn.py  kimtaingocdiamond_com.py  kimthanhh_com.py  kimtin_com_vn.py  kimtincantho_com.py  mihong_vn.py  minhvujewelry_vn.py  ngocbinh_com_vn.py  ngocthinh_jewelry_vn.py  phuquy_com_vn.py  sjc_com_vn.py  tiemvanghoangchieu_com.py  tiemvanghongnga_com.py  tiemvangkimhungphat_com.py  tiemvangmyngoc_com.py  tiemvangngocthuy_com.py  tiemvangngoctramq4_com.py  tiemvangtrongnghia_com.py  tiemvangvanthong_com.py  tiemvangxuantung_com.py  vangbaclienthanh_com.py  vangbacphucthanh_vn.py  vangchienminh_vn.py  (+2 more)
scripts/: alloy.sh  dataload.sh  nginx.sh  release.sh
sql/: 01-create-tables-of-wms.sql  02-create-tables-of-ohcl.sql  03-create-tables-of-seo.sql  03-create-tables-of-sys.sql  04-create-tables-of-chat.sql  05-setup-api-for-querying-symbols.sql  06-setup-api-brokers-and-products-for-investing.sql  07-setup-gold-store.sql  08-setup-product-of-gold-store.sql  09-setup-product-anchors.sql
sql/indexes/: 01-create-index-for-ohcl-tables.sql
sql/mysql/: 01-create-tables-of-wms.sql  02-create-tables-of-ohcl.sql  03-create-tables-of-sys.sql
sql/postgres/: 00-create-shared-functions.sql  01-create-table-of-wms.sql  02-create-table-of-ohcl.sql  03-create-tables-of-sys.sql  04-setup-api-for-querying-symbols.sql  05-setup-api-brokers-and-products.sql  06-setup-api-brokers-and-products-for-investing.sql  07-setup-gold-store.sql
sql/system/: 01-add-tables.sql  02-add-column-promotion.sql  03-add-column-timeout.sql  04-add-table-tbl_processes.sql
src/: helpers.rs  init.rs  lib.rs  load.rs  main.rs
src/actors/: cron.rs  dnse.rs  fireant.rs  mod.rs  redis.rs  simulator.rs  tcbs.rs  vps.rs
src/algorithm/: ahocorasick.rs  heap.rs  mod.rs
src/analytic/: mention.rs  mod.rs
src/cmds/: chat.rs  collect.rs  ggcolab.rs
src/schemas/: database.rs  graphql.rs  mod.rs  tsdb.rs
tests/: market_tests.rs  test_scope.py
(+271 files in other folders)
