[workspace]
resolver = "2"
members = [
    "pkgs/proxy",
    "pkgs/backend/integration",
    "pkgs/backend/schemas",
    "pkgs/backend/models",
    "pkgs/backend/services",
    "pkgs/libraries/algorithm",
    "pkgs/libraries/analysis",
    "pkgs/libraries/vector/runtime",
    "pkgs/macros/vector_config_macro",
    "pkgs/libraries/vector/components",
]
