[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "algorithm"
path = "src/main.rs"

[lib]
name = "vnscope"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Data modeling
juniper = "0.16"
serde = "1.0.123"
serde_json = "1.0.44"
polars = { version = "0.36.2", features = ["parquet", "lazy"] }
parquet = "53"
anyhow = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = "0.20.0"
pyo3-polars = "0.10.0"

# algorithm
rand_distr = "0.4.3"
rand = "0.8.5"
rayon = "1.10.0"

# feature order management
airtable = "0.1.0"

# Crawling data in background
cron-parser = "0.8.1"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
reqwest-retry = "0.6.1"
reqwest-middleware = { version = "0.3.3", features = ["json"] }
actix-rt = "2.10.0"
actix = "0.13.5"
awc = "3.5.1"
libc = "0.2.171"
tokio = { version = "1.26.0", features = ["full"] }

# Common
lazy_static = "1.5.0"
chrono-tz = "0.9.0"
chrono = "= 0.4.39"
futures = "0.3"
log = "0.4.22"

# Web application
dotenvy = "0.15.7"
env_logger = "0.8.2"
actix-web = "4.3.1"
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
