[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "algorithm"
path = "src/main.rs"

[lib]
name = "vnscope"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3", "pyo3-asyncio", "pyo3-polars", "polars", "numpy"]

[dependencies]
# Data modeling
juniper = "0.16"
serde = "1.0.123"
serde_json = "1.0.44"
parquet = "53"
arrow = "53"
anyhow = "1.0"
numpy = { version = "0.20.0", optional = true }
polars = { version = "0.36.2", features = ["parquet", "lazy"], optional = true }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20.0", optional = true }
pyo3-polars = { version = "0.10.0", optional = true }

# algorithm
rand_distr = "0.4.3"
statrs = "0.16.0"
rand = "0.8.5"
rayon = "1.10.0"

# feature order management
airtable-api = "0.1"

# feature dashboard monitoring
actix-web-prometheus = "0.1.2"
prometheus = "0.13.3"

# Crawling data in background
cron-parser = "0.8.1"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
reqwest-retry = "0.6.1"
reqwest-middleware = { version = "0.3.3", features = ["json"] }
actix-rt = "2.10.0"
actix = "0.13.5"
awc = "3.5.1"
libc = "0.2.171"
tokio = { version = "1.26.0", features = ["full"] }
aws-sdk-s3 = "1.90.0"
aws-config = "1.6.3"

# Common
lazy_static = "1.5.0"
chrono-tz = "0.9.0"
chrono = "= 0.4.39"
futures = "0.3"
log = "0.4.22"

# Web application
dotenvy = "0.15.7"
env_logger = "0.8.2"
actix-web = "4.3.1"
