[package]
name = "backend"
version = "1.0.15"
edition = "2021"

[[bin]]
name = "algorithm"
path = "src/main.rs"

[lib]
name = "vnscope"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3", "pyo3-asyncio", "pyo3-polars", "polars", "numpy", "env_logger"]
default = ["airtable-api"]

[dependencies]
# Data modeling
juniper = "0.16"
serde = "1.0.123"
serde_json = "1.0.44"
parquet = "53"
arrow = "53"
anyhow = "1.0"
numpy = { version = "0.20.0", optional = true }
polars = { version = "0.36.2", features = ["parquet", "lazy"], optional = true }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20.0", optional = true }
pyo3-polars = { version = "0.10.0", optional = true }

# algorithm
rand_distr = "0.4.3"
statrs = "0.16.0"
rand = "0.8.5"
rayon = "1.10.0"
itertools = "0.13"

# feature order management
airtable-api = { version = "0.1", optional = true }

# feature dashboard monitoring
actix-web-prometheus = "0.1.2"
prometheus = "0.13.3"

# Crawling data in background
cron-parser = "0.8.1"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "blocking", "rustls-tls"] }
reqwest-retry = "0.4.0"
reqwest-middleware = { version = "0.2.5" }
actix-rt = "2.10.0"
actix = "0.13.5"
awc = "3.5.1"
tokio = { version = "1.26.0", features = ["full"] }
aws-sdk-s3 = { version = "1.90.0", default-features = false, features = ["rustls", "default-https-client", "rt-tokio"] }
aws-config = { version = "1.6.3", default-features = false, features = ["rustls", "default-https-client", "rt-tokio"] }

# Common
lazy_static = "1.5.0"
chrono-tz = "0.9.0"
chrono = "= 0.4.39"
futures = "0.3"
log = "0.4.22"

# Web application
dotenvy = "0.15.7"
actix-web = "4.3.1"
env_logger = { version = "0.8.2", optional = true }
tracing-subscriber = { version = "0.3.16", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.26.0", features = ["full", "test-util"] } # Thêm test-util cho test
