[build-system]
requires = ["maturin>=1.5.0,<2.0.0", "cython>=0.23.4"]
build-backend = "maturin"

[project]
name = "vnscope"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pyarrow>=7.0.0",
    "polars>=0.36.2",
    "mplfinance>=0.12.10b0",
]

[tool.maturin]
module-name = "vnscope.core"
python-source = "sdk"
